--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,7 @@
 @import "../../node_modules/foundation-sites/scss/foundation";
 @import url('https://fonts.googleapis.com/css?family=Itim|Life+Savers|Open+Sans|Muli');
+@import "../../node_modules/css-loader/index.js";
+
 
 //Foundations
 @include foundation-flex-grid;
