--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Itim|Life+Savers|Open+Sans|Muli');
 @import "../../node_modules/css-loader/index.js";
 @import "../../node_modules/sass-loader/lib/loader.js";
+@import "../../node_modules/node-sass/lib/index.js";
 
 
 
